# data-modelling-sdk

./: .pre-commit-config.yaml  Bet.odcs.yaml  CHANGELOG.md  COVERAGE_FINAL.md  Cargo.toml  IMPLEMENTATION_STATUS.md  LLM.txt  MIGRATION_GUIDE.md  MIGRATION_STATUS.md  NEXT_STEPS.md  PLAN.md  README.md  SECURITY.md  SUMMARY.md  TODO.md  cargo-audit.toml  test_sql.sh
.cursor/rules/: specify-rules.mdc
.github/workflows/: ci.yml  publish.yml  release-cli.yml  release-wasm.yml
crates/core/: Cargo.toml
crates/core/benches/: import_bench.rs  inference_bench.rs  staging_benchmark.rs
crates/core/src/: lib.rs
crates/core/tests/: auth_tests.rs  cads_tests.rs  domain_tests.rs  export_tests.rs  git_tests.rs  import_tests.rs  integration_tests.rs  model_tests.rs  (+13 more)
crates/odm/: Cargo.toml
crates/wasm/: Cargo.toml
docs/: ARCHITECTURE.md  BUILD_CLI.md  CLI.md  PIPELINE_TUTORIAL.md
examples/: README.md  full-example.odcs.yaml  orders-latest.odcl.yaml  test_ref.rs  test_sql.rs  time-example.odcl.yaml
schemas/: README.md  cads.schema.json  common-types-schema.json  decision-schema.json  domain-schema.json  knowledge-schema.json  sketch-index-schema.json  sketch-schema.json  system-schema.json  workspace-schema.json
specs/001-odps-validation/: spec.md
specs/001-wasm-exports/: spec.md
specs/003-odcs-field-preservation/: spec.md
specs/006-cli-wrapper/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: lib.rs
src/auth/: mod.rs
src/cli/: error.rs  main.rs  mod.rs  output.rs  reference.rs  validation.rs
src/convert/: converter.rs
src/export/: avro.rs  cads.rs  decision.rs  json_schema.rs  knowledge.rs  markdown.rs  mod.rs  odcl.rs  odcs.rs  odps.rs  openapi.rs  pdf.rs  png.rs  protobuf.rs  sql.rs
src/git/: mod.rs
src/import/: avro.rs  bpmn.rs  decision.rs  dmn.rs  json_schema.rs  knowledge.rs  mod.rs  odcl.rs  odcs.rs  odcs_shared.rs  odps.rs  openapi.rs  protobuf.rs  sql.rs
src/model/: api_loader.rs  loader.rs  mod.rs  saver.rs
src/models/: column.rs  cross_domain.rs  data_model.rs  decision.rs  domain_config.rs  enums.rs  knowledge.rs  mod.rs  relationship.rs  table.rs  workspace.rs
src/storage/: api.rs  browser.rs  filesystem.rs  mod.rs
src/validation/: input.rs  mod.rs  relationships.rs  schema.rs  tables.rs
src/workspace/: mod.rs
tests/: auth_tests.rs  cli_tests.rs  export_tests.rs  git_tests.rs  import_tests.rs  integration_tests.rs  model_tests.rs  models_tests.rs  nested_structures_tests.rs  odcs_comprehensive_tests.rs  storage_tests.rs  struct_reserved_names_tests.rs  validation_tests.rs  workspace_tests.rs
tests/cli/: export_tests.rs  import_tests.rs  integration_tests.rs  mod.rs
(+128 files in other folders)
